--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+*
+{
+	box-sizing: border-box;
+}
 html, body
 {
 	position: absolute;
@@ -10,8 +14,14 @@ html, body
 	color: #0F0;
 	font-family: 'Arial';
 }
-#player_data
+p
 {
+    padding: 0;
+    margin: 0;
+}
+#player_data, #player_area
+{
+	padding: 1em;
 	margin: 0 auto;
 	border: 1px solid #0F0;
 }
@@ -19,4 +29,23 @@ html, body
 {
 	margin: 0 auto;
 	border: 1px solid #F00;
+}
+.blink
+{
+	animation: blinker steps(1) 500ms infinite alternate;
+}
+@keyframes blinker
+{  
+	0% { visibility: visible; }
+	50% { visibility: hidden; }
+	100% { visibility: visible; }
+}
+#console_indicator
+{
+	height: 1em;
+	width: 0.5em;
+	background-color: rgb(0, 255, 0);
+	display: inline-block;
+	margin-left: 10px;
+	margin-bottom: -.2em;
 }
