--- a/style.css
+++ b/style.css
@@ -1,6 +1,10 @@
 *
 {
 	box-sizing: border-box;
+	font-family: Ubuntu Mono, Arial;
+	font-style: normal;
+	font-variant: normal;
+	font-weight: normal;
 }
 html, body
 {
@@ -14,10 +18,12 @@ html, body
 	color: #0F0;
 	font-family: 'Arial';
 }
-p
+span
 {
     padding: 0;
     margin: 0;
+	border: 1px solid red;
+	display: inline;
 }
 #player_data, #player_area
 {
