--- a/style.css
+++ b/style.css
@@ -17,7 +17,8 @@ html, body
 	background-color: #000;
 	color: #0F0;
 	font-family: 'Arial';
-	overflow-y: hidden;
+	overflow-x: hidden;
+	overflow-y: auto;
 }
 span
 {
